--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,15 @@ import Card from '../components/Card.astro';
     <h1><span class='text-gradient'>Astro</span> API Consumption</h1>
     <ul role='list' class='link-card-grid'>
       <Card
-        href='/rick-morty'
+        href='/astro-example-api/rick-morty'
         title='Rick And Morty'
         body='Rick and morty api consumption.'
       />
-      <Card href='/anime' title='Anime' body='Anime Api usage' />
+      <Card
+        href='/astro-example-api/anime'
+        title='Anime'
+        body='Anime Api usage'
+      />
       <Card
         href='https://3011.site'
         title='Wall of Webs'
