--- a/src/pages/anime.astro
+++ b/src/pages/anime.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Carta from '../components/Carta.astro';
+import Back from '../components/Back.astro';
 const response = await fetch('https://api.jikan.moe/v4/anime');
 const data = await response.json();
 const characters = data.data;
@@ -8,6 +9,7 @@ const characters = data.data;
 
 <Layout title='Anime'>
   <h1>Anime</h1>
+  <Back />
   <ul>
     {
       characters.map(({ title, type, images }) => (
