--- a/src/pages/rick-morty.astro
+++ b/src/pages/rick-morty.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Carta from '../components/Carta.astro';
+import Back from '../components/Back.astro'
 const response = await fetch('https://rickandmortyapi.com/api/character');
 const data = await response.json();
 const characters = data.results;
@@ -8,6 +9,7 @@ const characters = data.results;
 
 <Layout title='Rick and Morty'>
   <h1>Rick and Morty</h1>
+  <Back />
   <ul>
     {
       characters.map(({ name, species, image }) => (
