--- a/src/components/Carta.astro
+++ b/src/components/Carta.astro
@@ -3,9 +3,11 @@ const { imagen, titulo, especie } = Astro.props;
 ---
 
 <li class='link-card'>
-  <img class='imagen' src={imagen} />
-  <h2>{titulo}</h2>
-  <span>{especie}</span>
+  <div>
+    <img class='imagen' src={imagen} />
+    <h2>{titulo}</h2>
+    <span>{especie}</span>
+  </div>
 </li>
 
 <style>
@@ -17,7 +19,7 @@ const { imagen, titulo, especie } = Astro.props;
     align-items: center;
     width: fit-content;
     padding: 5px;
-    background-color: white;
+    background-color: #f5f5f5;
     background-image: var(--accent-gradient);
     background-size: 400%;
     border-radius: 0.5rem;
@@ -26,6 +28,16 @@ const { imagen, titulo, especie } = Astro.props;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -2px rgba(0, 0, 0, 0.1);
     margin: 1vh 0;
+  }
+  .link-card > div {
+    width: 100%;
+    text-decoration: none;
+    line-height: 1.4;
+    padding: 1rem 1.3rem;
+    border-radius: 0.35rem;
+    color: #111;
+    background-color: #f5f5f5;
+    opacity: 0.8;
   }
   h2 {
     margin: 0;
