Delete of extra config

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,12 @@ import Card from '../components/Card.astro';
     <h1><span class='text-gradient'>Astro</span> API Consumption</h1>
     <ul role='list' class='link-card-grid'>
       <Card
-        href='/astro-example-api/rick-morty'
+        href='/rick-morty'
         title='Rick And Morty'
         body='Rick and morty api consumption.'
       />
       <Card
-        href='/astro-example-api/anime'
+        href='/anime'
         title='Anime'
         body='Anime Api usage'
       />
