--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
     <link
       rel='icon'
       type='image/svg+xml'
-      href='/astro-example-api/favicon.svg'
+      href='/favicon.svg'
     />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
