--- a/src/components/Carta.astro
+++ b/src/components/Carta.astro
@@ -38,6 +38,10 @@ const { imagen, titulo, especie } = Astro.props;
     color: #111;
     background-color: #f5f5f5;
     opacity: 0.8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   h2 {
     margin: 0;
